# cmugpt-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  buildings.json  devenv.nix  devenv.yaml  flake.nix  pyproject.toml  railway.toml  requirements.txt  secretspec.toml
.forgejo/workflows/: ci.yml
agent/: __init__.py  agent_hub.py  buildings.py  cmu_maps.py  graph.py  guards.py  mcp_tools.py  prompts.py  schema.py  streaming.py  test_agent.py  tests.py
ci_test/: test_agent.py
email_interface/: __init__.py  config.py  google_auth.py  handler.py  keycloak_auth.py  send_tool.py  token_store.py  utils.py  worker.py
src/: auth_routes.py  main.py
tests/: test_email_from_enforcement.py
tools/: live_agent_e2e.py  live_agent_smoke.py
